components/api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  creationTimestamp: null
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 80
        path: /api/(.*)
        pathType: Prefix
status:
  loadBalancer: {}
